--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -84,6 +84,7 @@ RUN --mount=type=cache,target="$POETRY_CACHE_DIR" \
   && poetry run pip install -U pip \
   && poetry install \
     $(if [ "$DJANGO_ENV" = 'production' ]; then echo '--only main'; fi) \
+    $(if [ "$DJANGO_ENV" = 'development' ]; then echo '--with dev'; fi) \
     --no-interaction --no-ansi
 
 # This is a special case. We need to run this script as an entry point:
